@@ -2926,7 +2926,7 @@ int lanczos_spd(matrix *A, matrix *V, matrix *va,int m,int lm)
 } /* end of lanczos_spd */
 
 
-void Rlanczos(double *A,double *U,double *D,int *n, int *m, int *lm) {
+void Rlanczos(double *A,double *U,double *D,int *n, int *m, int *lm,double *tol) {
 /* Prototype faster lanczos_spd for calling from R.
    A is n by n symmetric matrix. Let k = m + max(0,lm).
    U is n by k and D is a k-vector.
@@ -2946,13 +2946,15 @@ void Rlanczos(double *A,double *U,double *D,int *n, int *m, int *lm) {
              an eigenvector!
         
 */
-  int biggest=0,f_check,i,k,kk,ok,l,j,vlength=0,low_conv,high_conv,use_low,conv;
-  double **q,*v=NULL,bt,xx,yy,*a,*b,*d,*g,*z,*err,*p0,*p1,*Ap,*zp,*qp,normTj,eps_stop=DOUBLE_EPS*10,max_err;
+  int biggest=0,f_check,i,k,kk,ok,l,j,vlength=0,neg_conv,pos_conv,ni,pi,neg_closed,pos_closed,converged;
+  double **q,*v=NULL,bt,xx,yy,*a,*b,*d,*g,*z,*err,*p0,*p1,*Ap,*zp,*qp,normTj,eps_stop=DOUBLE_EPS,max_err;
   unsigned long jran=1,ia=106,ic=1283,im=6075; /* simple RNG constants */
   
+  eps_stop = *tol; 
+
   if (*lm<0) { biggest=1;*lm=0;} /* get m largest magnitude eigen-values */
   f_check = (*m + *lm)/2; /* how often to get eigen_decomp */
-  if (f_check<1) f_check ++;
+  if (f_check<10) f_check =10;
   kk = (int) floor(*n/10); if (kk<1) kk=1;  
   if (kk<f_check) f_check = kk;
 
@@ -3052,23 +3054,34 @@ void Rlanczos(double *A,double *U,double *D,int *n, int *m, int *lm) {
       /* and check for termination ..... */
       if (j >= *m + *lm)
       { max_err=normTj*eps_stop;
-        if (biggest) 
-	{ low_conv=0;i=j; while (i>=0&&err[i]<max_err&&d[i]<0.0) { low_conv++;i--;}
-	  high_conv=0;i=0; while (i<=j&&err[i]<max_err&&d[i]>=0.0) { i++;high_conv++;}
-          conv=high_conv;use_low=0;
-          for (i=0;i<low_conv;i++) /* test each of the negatives to see if it should be in the set of largest */
-	  { if (high_conv==0) {conv++;use_low++;} else
-            if (-d[j-i]>=d[high_conv-1]) { conv++;use_low++;}
-          } 
-          if (conv >= *m) /* then have enough - need to reset lm and m appropriately and break */
-	  { while (conv > *m) /* drop smallest magnitude terms */ 
-	    { if (use_low==0) {high_conv--;conv--;} else
-	      if (high_conv==0) {use_low--;conv--;} else
-              if (-d[j-use_low+1]>d[high_conv-1]) {high_conv--;conv--;} else { use_low--;conv--;}
-            } 
-            *lm = use_low; *m = high_conv;
+        if (biggest) { /* getting m largest magnitude eigen values */
+          /* Finished only when the smallest element of the positive converged set and the 
+             smallest element of the negative converged set are both not in the largest magnitude 
+             set, or these sets are finished, and the largest magnitude set is of size *m, or when the total number 
+             converged equals the matrix dimension */
+	  pos_closed=neg_closed=0;
+          neg_conv=0;i=j; while (i>=0&&err[i]<max_err&&d[i]<0.0) { neg_conv++;i--;}
+          if (i>=0&&err[i]<max_err) neg_closed=1; /* all negatives found */
+	  pos_conv=0;i=0; while (i<=j&&err[i]<max_err&&d[i]>=0.0) { i++;pos_conv++;}
+          if (i<=j&&err[i]<max_err) pos_closed=1; /* all positives found */
+ 
+          if (neg_conv+pos_conv >= *m) { /* some chance of having finished */
+            pi=0;ni=0; /* counters for how many of neg and pos converged to include in largest set */
+            while (pi+ni < *m) {
+              if ((d[pi] > -d[j-ni]&&pi<pos_conv)||ni>=neg_conv) pi++; else ni++;
+            }
+            /* now pi and ni are the number of terms to include in the largest m 
+               from the +ve and -ve converged sets */
+            converged=1;
+            if (!pos_closed&&pi==pos_conv) converged=0; /* don't know that there is not a larger value to come */            
+            if (!neg_closed&&ni==neg_conv) converged=0; /* ditto */
+          } else converged = 0;
+ 
+          if (converged) {
+            *m = pi;
+            *lm = ni;
             j++;break;
-	  }
+          }
         } else
         { ok=1;
           for (i=0;i < *m;i++) if (err[i]>max_err) ok=0;
